[package]
name = "nested_intervals"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/MoinSebi/nested_intervals"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
